--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">GSTBillingApp</string>
+<!--    GSTBillingApp-->
+    <string name="app_name">Tool</string>
     <string name="welcomeText">Hey, \n Welcome To\n Motiram Construction</string>
     <string name="welcomeText2">This is Billing App</string>
 </resources>
